# testing_de

./: .env  .env.dev  .env.sectret  DDL_testing_de.sql  docker-compose.yml  pyproject.toml
.idea12/: misc.xml  modules.xml
src/: __init__.py  main.py  model.py  settings.py  userValidator.py
src/CRUDs/: __init__.py  ddl.py  ddl_functions.py  testConnect.py
src/connectionDB/: __init__.py  connector.py  operations.py  querys.py
src/interfaceAPI/: __init__.py  model.py  obtaining.py
src/model/: __init__.py  model.py
src/response_parsing/: __init__.py  pars.py
src/response_parsing/models/: coordinates.py  dob.py  location.py  login.py  name.py  picture.py  street.py  timezone.py  user.py
src/tests/: obtaining_test.py
src/validators/: __init__.py  validation.py
test/unit_tests/: obtaining_test.py
