[tool.poetry]
name = "testing-de"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
msgspec = "^0.18.6"
httpx = "^0.27.0"
logging = "^0.4.9.6"
pydantic = "^2.7.4"
psycopg2 = "^2.9.9"
email-validator = "^2.2.0"
validate-email = "^1.3"
password-validator = "^1.0"
loguru = "^0.7.2"
pydantic-settings = "^2.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
